--- a/openshift/templates/testwebapp.json
+++ b/openshift/templates/testwebapp.json
@@ -122,7 +122,7 @@
           }
         ],
         "postCommit": {
-          "script": "./manage.py test"
+          "script": "pytest"
         }
       }
     },
@@ -249,7 +249,7 @@
       "displayName": "Git Repository URL",
       "required": true,
       "description": "The URL of the repository with your application source code.",
-      "value": "https://git.nttict.com.au/bhohnke/bentest/.git"
+      "value": "https://github.com/benmcbenben/test_openshift"
     },
     {
       "name": "SOURCE_REPOSITORY_REF",
