--- a/openshift/templates/testwebapp.json
+++ b/openshift/templates/testwebapp.json
@@ -146,7 +146,7 @@
             "imageChangeParams": {
               "automatic": true,
               "containerNames": [
-                "django-example"
+                "testwebapp"
               ],
               "from": {
                 "kind": "ImageStreamTag",
